# software_architecture_assigment1

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  Readme.md  Rocket.toml  db.sqlite  docker-compose.monitoring.yml  docker-compose.opensearch.yml  docker-compose.proxy.yml  docker-compose.yml  entrypoint.sh  init_db.sh  make_report.py  metrics_sampler.sh  run_loads.sh  start.sh
loadtest-k6/: script.js
migrations/: 001_initial_schema.sql  002_sample_data.sql
monitoring/: prometheus.yml
results/: direct-10-20250907-121902-docker-stats.csv  direct-100-20250907-122404-docker-stats.csv  direct-1000-20250907-122906-docker-stats.csv  direct-5000-20250907-123413-docker-stats.csv  summary_cpu.txt  summary_k6.csv  summary_mem.txt  summary_pids.txt  traefik-10-20250907-115806-docker-stats.csv  traefik-10-20250907-212838-docker-stats.csv  traefik-100-20250907-120307-docker-stats.csv  traefik-1000-20250907-120810-docker-stats.csv  traefik-5000-20250907-121322-docker-stats.csv
results/json/: direct_1000_2025-09-08-02-18-42.json  direct_100_2025-09-08-02-12-05.json  direct_10_2025-09-08-02-07-04.json  direct_1_2025-09-08-01-37-09.json  direct_1_2025-09-08-01-40-17.json  direct_1_2025-09-08-01-49-13.json  direct_1_2025-09-08-02-02-03.json  direct_1_2025-09-08-05-05-29.json  direct_1_2025-09-08-06-57-44.json  direct_5000_2025-09-08-02-23-43.json  traefik_1000_2025-09-08-03-29-23.json  traefik_1000_2025-09-08-07-33-18.json  (+8 more)
src/: cache.rs  db.rs  main.rs  models.rs  opensearch_client.rs  routes.rs  routes_search.rs  routes_suggest.rs  search.rs  web.rs
static/: index.html
(+31 files in other folders)
