[package]
name = "libro_reviews"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx_sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

bb8 = "0.8"
bb8-redis = "0.14"

[dev-dependencies]
sqlx-cli = { version = "0.7", features = ["sqlite"] }